# zezenia_gfx_dumper

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
src/: main.c  version.h.in
